syntax = "proto3";

package forest_admin_rpc_agent;

service Rpc {
  rpc ListUsers (Empty) returns (UserList);
}

message Empty {}

message User {
  string id = 1;
  string email = 2;
  string first_name = 3;
  string last_name = 4;
}

message UserList {
  repeated User users = 1;
}